@@ -1,3 +1,10 @@
+2009-10-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* libtiff/tif_pixarlog.c (PixarLogEncode): Fix non-important
+	warning noticed in Visual Studio 2005 build. Resolves "Bug 2068 -
+	Visual Studio 2005 64-bit warning in tif_pixarlog.c",
+	http://bugzilla.maptools.org/show_bug.cgi?id=2068
+
 2009-10-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* libtiff/tif_dirread.c: Eliminate GCC "dereferencing type-punned
